# catkinSrc

./: .gitignore  .gitmodules  .rosinstall  README.md  README.md~  dummy file
NNvisit/: CMakeLists.txt  package.xml
NNvisit/launch/: GaussianPlotter.launch  NNvisitGaussianMaster.launch  NNvisitMPSParticleMaster.launch  NNvisitMPSParticleMasterCentralized.launch  NNvisitMPSParticleMasterCentralizedPost.launch  NNvisitPFparams_gaussian_centralized.launch  NNvisitPFparams_mps.launch  mps.launch  playbackTest.launch  playbackTest.launch~
NNvisit/scripts/: plotMPSParticleMocap.py
agitr/: CMakeLists.txt  CMakeListsChapter3.txt  count.cpp  hello.cpp  package.xml  packageChapter3.xml  pubvel.cpp  pubvel_toggle.cpp  pubvel_with_max.cpp  reverse_cmd_vel.cpp  set_bg_color.cpp  spawn_turtle.cpp  subpose.cpp
agitr/launch/: doublesim.launch  example.launch  maxVel.launch  reverse.launch  triplesim.launch
brw_omni_wheel/: CMakeLists.txt  package.xml
brw_omni_wheel/launch/: BRW.launch  BRWOmniGaden.launch  BRWOmniGauss.launch  BRWOmniGaussPF.launch
brw_omni_wheel/scripts/: BRWOmni.py  BRWOmniwithPF.py  BRW_functions.py  GaussianSensorPackage.py  plotGaussianAndRobots.py  plotGaussianAndRobotsForScreenRecording.py  plotGaussianAndRobotsForScreenRecordingWithParticles.py  plotGaussianAndRobotsWithParticles.py
crazyflie_DARC/: CMakeLists.txt  package.xml  package.xml~
crazyflie_DARC/launch/: crazy_mocap.launch  hover.launch  hover_cf.launch  indControl.launch  swarm_cf.launch  swarm_cf_hover.launch
crazyflie_DARC/scripts/: cf2_waypoints.py  cf_swarm_wControllers.py  cf_waypoints.py  connect_log_param.py  hover.py  hover_cf.py  hover_control.py  hover_multiple.py  indControl.py  init_radio.py  swarm_cf.py
enif_iuc/: CMakeLists.txt  README.md  package.xml
enif_iuc/include/: enif.h
enif_iuc/launch/: enif_iuc_ground.launch  enif_iuc_quad.launch
enif_iuc/msg/: AgentBatteryState.msg  AgentBox.msg  AgentCheck.msg  AgentEstimatedGaussian.msg  AgentGlobalPosition.msg  AgentHeight.msg  AgentHome.msg  AgentLocal.msg  AgentMPS.msg  AgentSource.msg  AgentState.msg  AgentTakeoff.msg  AgentWaypointTask.msg  Signal.msg  Waypoint.msg  WaypointTask.msg
enif_iuc/src/: enif_iuc_ground.cpp  enif_iuc_quad.cpp  signal_subscriber.cpp
gaden/: .gitignore
gaden/simulated_anemometer/: CMakeLists.txt
gaden/simulated_gas_sensor/: CMakeLists.txt  package.xml
gaden_sims/: CMakeLists.txt  package.xml
gaden_sims/config/: pfParams.json  pfParams.yaml  pfParams10x10.yaml  pfParams10x10info.yaml
gaden_sims/launch/: BRW_PF_Gaden10x10.launch  BRW_PF_Gaden_Sim10x10.launch  info_PF_Gaden10x10.launch  info_PF_Gaden4x3.launch  info_PF_Gaden_Sim10x10.launch  info_PF_Gaden_Sim4x3.launch  raster_PF_Gaden.launch  raster_PF_Gaden10x10.launch  raster_PF_Gaden4x3.launch  raster_Random_PF_Gaden10x10.launch  raster_Random_PF_Gaden_Sim10x10.launch  raster_X_PF_Gaden_Sim.launch  raster_X_PF_Gaden_Sim10x10.launch  raster_X_PF_Gaden_Sim4x3.launch  raster_Y_PF_Gaden_Sim.launch  raster_Y_PF_Gaden_Sim10x10.launch
graph_search/: CMakeLists.txt  package.xml
l3_particlefilter/: CMakeLists.txt  package.xml
mps_driver/msg/: MPS.msg
nn_visit/: CMakeLists.txt  package.xml
obstacle_avoid/: CMakeLists.txt  package.xml
obstacle_avoid/mps_driver/: CMakeLists.txt  CMakeListsBU.txt  README.md  package.xml
obstacle_avoid/mps_driver/Driver/: meson-gpiomem.ko
obstacle_avoid/mps_driver/include/: commandResponse.h~
obstacle_avoid/mps_driver/launch/: mps_driver.launch
obstacle_avoid/mps_driver/msg/: MPS.msg
obstacle_avoid/mps_driver/src/: #commandResponse.cpp#  commandResponse.cpp  commandResponse.cpp~  mps_driver.cpp
omni_wheel/: CMakeLists.txt  package.xml
particle_filter/: CMakeLists.txt  package.xml
platform_real/: CMakeLists.txt  package.xml
platform_real_single/: CMakeLists.txt  package.xml
platform_sims/: CMakeLists.txt  package.xml
plume_sims/: CMakeLists.txt  package.xml
pyagitr/: CMakeLists.txt  package.xml
quad_rviz/: CMakeLists.txt  package.xml
quadnodes/: CMakeLists.txt  mutualInfoServer.cpp  offb_node.cpp  package.xml  segLidarLite.cpp  tfWorldUAV.cpp  xboxAltControlFF.cpp  xboxAngControl.cpp  zScan.cpp  zScanNoYaw.cpp
raster_scan/: CMakeLists.txt  package.xml
teleop_twist_keyboard/: teleop_twist_keyboard.py
vrpn_client_ros/: CMakeLists.txt
vtolnodes/: CMakeLists.txt  package.xml
wifi_particle_filter/: CMakeLists.txt  package.xml
(+4157 files in other folders)
