<?xml version="1.0"?>
<package>
  <name>mps_driver</name>
  <version>0.0.0</version>
  <description>The mps_driver package</description>

  <maintainer email="uudarclab@gmail.com">DARCLab</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dji_sdk</run_depend>

</package>
